保存记录 开机自动启动选项

--- a/H.WorkTools/App.config
+++ b/H.WorkTools/App.config
@@ -11,6 +11,7 @@
 		<add key="Tcp" value="6280" />
 		<add key="NickName" value="" />
 		<add key="Ip" value="" />
+		<add key="Start" value="" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
