--- a/H.ScreenCapture/H.ScreenCapture.csproj
+++ b/H.ScreenCapture/H.ScreenCapture.csproj
@@ -39,119 +39,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColorBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ColorBox.Designer.cs">
-      <DependentUpon>ColorBox.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ColorBoxDesginer.cs" />
-    <Compile Include="FrmCapture.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmCapture.Designer.cs">
-      <DependentUpon>FrmCapture.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FrmOut.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmOut.Designer.cs">
-      <DependentUpon>FrmOut.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FrmSize.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmSize.Designer.cs">
-      <DependentUpon>FrmSize.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ImageProcessBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ImageProcessBox.Designer.cs">
-      <DependentUpon>ImageProcessBox.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MouseHook.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ScreenCapture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ToolButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ToolButton.Designer.cs">
-      <DependentUpon>ToolButton.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ToolButtonDesigner.cs" />
-    <Compile Include="Win32.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ColorBox.resx">
-      <DependentUpon>ColorBox.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmCapture.resx">
-      <DependentUpon>FrmCapture.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmOut.resx">
-      <DependentUpon>FrmOut.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmSize.resx">
-      <DependentUpon>FrmSize.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\arrow.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\brush.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\close.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ok.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\rect.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\save.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\text.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ellips.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\none.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\cancel.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\separator.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\color.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\large.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\middle.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\small.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\out.png" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
