添加画线功能和删除2个单选那妞  都是截图功能区域

--- a/H_ScreenCapture/H_ScreenCapture.csproj
+++ b/H_ScreenCapture/H_ScreenCapture.csproj
@@ -132,6 +132,7 @@
     <Content Include="Resources\btn_close.png" />
     <Content Include="Resources\btn_ellips.png" />
     <None Include="Resources\btn_ellips_fill.png" />
+    <None Include="Resources\btn_line.png" />
     <Content Include="Resources\btn_mosaic.png" />
     <Content Include="Resources\btn_ok.png" />
     <Content Include="Resources\btn_out.png" />
