删除字体设置，马赛克按钮 未处理的 1.大小设置的时候   控制 字体也一起做 2.马赛克没有实现 3.删除拖动size

--- a/H_ScreenCapture/H_ScreenCapture.csproj
+++ b/H_ScreenCapture/H_ScreenCapture.csproj
@@ -94,6 +94,13 @@
     <Compile Include="SizeTrackBar.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ToolButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ToolButton.designer.cs">
+      <DependentUpon>ToolButton.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ToolButtonDesigner.cs" />
     <Compile Include="Win32.cs" />
   </ItemGroup>
   <ItemGroup>
