--- a/H_WorkTools/App.config
+++ b/H_WorkTools/App.config
@@ -12,6 +12,7 @@
 		<add key="NickName" value="" />
 		<add key="Ip" value="" />
 		<add key="Start" value="" />
+		<add key="Last_ScreenCapture" value="" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
