添加 对比界面 添加 日期标题格式化 + 透明度等等部分实现。 待实现 1.快捷键对接+ 快捷键缓存等 2.添加 N录音 + ff 来合并视频 3.ff来录屏 4.提醒功能添加

--- a/H_ScreenCapture/H_ScreenCapture.csproj
+++ b/H_ScreenCapture/H_ScreenCapture.csproj
@@ -74,6 +74,12 @@
     <Compile Include="FrmRectAlert.designer.cs">
       <DependentUpon>FrmRectAlert.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmShowImage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmShowImage.designer.cs">
+      <DependentUpon>FrmShowImage.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmTextAlert.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRectAlert.resx">
       <DependentUpon>FrmRectAlert.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmShowImage.resx">
+      <DependentUpon>FrmShowImage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmTextAlert.resx">
       <DependentUpon>FrmTextAlert.cs</DependentUpon>
