新增 Naudio 获取系统时音频列表 动态匹配 ffmpeg 输入设备。 布局调整。 待办 1.远程协助 求助 2.提醒功能 3.ioc 设计 4.整体多语言设计和整理

--- a/H_Util/H_Util.csproj
+++ b/H_Util/H_Util.csproj
@@ -61,6 +61,7 @@
     <Compile Include="HttpListenerPost.cs" />
     <Compile Include="JpToEn.cs" />
     <Compile Include="Log.cs" />
+    <Compile Include="ProcessHelper.cs" />
     <Compile Include="ScreenRecordHelper.cs" />
     <Compile Include="SocketLib.cs" />
     <Compile Include="SqlString.cs" />
