--- a/H_WorkTools/packages.config
+++ b/H_WorkTools/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="MaterialDesignColors" version="2.0.9" targetFramework="net462" />
   <package id="MaterialDesignThemes" version="4.6.1" targetFramework="net462" />
+  <package id="NAudio" version="1.10.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net462" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
