--- a/H_WorkTools/H_WorkTools.csproj
+++ b/H_WorkTools/H_WorkTools.csproj
@@ -42,6 +42,9 @@
   <PropertyGroup>
     <StartupObject>HWorkTools.App</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\hworktools.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="MaterialDesignColors, Version=2.0.9.0, Culture=neutral, PublicKeyToken=df2a72020bd7962a, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.2.0.9\lib\net462\MaterialDesignColors.dll</HintPath>
@@ -227,6 +230,7 @@
     </Content>
     <Content Include="FFmpeg\screen-capture-recorder-x64.dll" />
     <Content Include="FFmpeg\screen-capture-recorder.dll" />
+    <Resource Include="Resources\hworktools.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets')" />
