--- a/H_WorkTools/packages.config
+++ b/H_WorkTools/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LiteDB" version="5.0.15" targetFramework="net462" />
   <package id="MaterialDesignColors" version="2.0.9" targetFramework="net462" />
   <package id="MaterialDesignThemes" version="4.6.1" targetFramework="net462" />
   <package id="NAudio" version="1.10.0" targetFramework="net462" />
