--- a/H_WorkTools/H_WorkTools.csproj
+++ b/H_WorkTools/H_WorkTools.csproj
@@ -103,12 +103,29 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Dailog\CommonDialogShow.cs" />
+    <Compile Include="Dailog\CurcularProgressView.xaml.cs">
+      <DependentUpon>CurcularProgressView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dailog\DelegateCommand.cs" />
+    <Compile Include="Dailog\ExeView.xaml.cs">
+      <DependentUpon>ExeView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dailog\ViewModelBase.cs" />
     <Compile Include="DeskShareView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DeskShareView.designer.cs">
       <DependentUpon>DeskShareView.cs</DependentUpon>
     </Compile>
+    <Page Include="Dailog\CurcularProgressView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Dailog\ExeView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -118,6 +135,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Hotkey.cs" />
+    <Compile Include="Dailog\ExeViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
