---待开发 录像倒计时 录像麦克风 给我默认值 可以不选 提醒增删改查 json 交互 弹出框 定事任务自动提醒  弹出框 ---多语言整理 韩语  日语  中文  英文 需要写一个多语言 json 读取 快捷键  有点bug  多次执行 和卡死问题 congfig  占用问题

--- a/H_WorkTools/App.config
+++ b/H_WorkTools/App.config
@@ -4,17 +4,38 @@
         
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup>
 	<appSettings>
+		<!--语言设置-->
 		<add key="Language" value="zh_cn" />
+		<!--剪贴板秘钥-->
 		<add key="Encrypt" value="62806280628062806280628062806280" />
+		<!--录屏导出路径-->
 		<add key="ScreenRecordingPath" value="" />
-		<add key="ScreenRecordingFps" value="" />
+		<!--通信端口-->
 		<add key="Tcp" value="6280" />
+		<!--昵称-->
 		<add key="NickName" value="" />
+		<!--IP-->
 		<add key="Ip" value="" />
+		<!--开机启动-->
 		<add key="Start" value="" />
+		<!--最后一次截图区域-->
 		<add key="ScreenCapture_Last" value="" />
+		<!--对比窗体名称-->
 		<add key="ScreenCapture_Title" value="1111${yyyy-MM-dd HH:mm:ss}" />
-		<add key="ScreenCapture_Opacity" value="60" />
+		<!--对比窗体透明度-->
+		<add key="ScreenCapture_Opacity" value="60" />		
+		
+		<!--截图快捷键-->
+		<add key="ScreenCapture_Key" value="0|1|1|A" />
+		<!--最后一次截图快捷键-->
+		<add key="ScreenCapture_LastKey" value="0|1|1|S" />
+		<!--对比截图快捷键-->
+		<add key="ScreenCapture_DiffKey" value="0|1|1|D" />
+		
+		<!--共享桌面停止-->
+		<add key="DeskShare" value="0|Escape" />
+		<!--剪贴板快捷键-->
+		<add key="Clipboard" value="5|1" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
