1.提醒增删改查 json 交互 弹出框 技术问题 2.实现新增 3.实现修改 4.实现搜索 5.实现删除 6.实现定时提醒 7.设置闹铃时间间隔 ---多语言整理 韩语  日语  中文  英文 需要写一个多语言 json 读取 快捷键  有点bug  多次执行 和卡死问题 congfig  占用问题

--- a/H_WorkTools/App.config
+++ b/H_WorkTools/App.config
@@ -36,6 +36,9 @@
 		<add key="DeskShare" value="0|Escape" />
 		<!--剪贴板快捷键-->
 		<add key="Clipboard" value="5|1" />
+
+		<!--闹铃监听间隔-->
+		<add key="Alarm" value="300000 " />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
