新增代码模块统计功能 新增停止录屏快捷键 shift+alt+Q

--- a/H_WorkTools/App.config
+++ b/H_WorkTools/App.config
@@ -39,6 +39,9 @@
 
 		<!--闹铃监听间隔-->
 		<add key="Alarm" value="300000 " />
+
+		<!--闹铃监听间隔-->
+		<add key="Rule" value="" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
